add header and footer

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,1 +1,58 @@
-<h1>hello world</h1>
+<div class="jumbotron">
+    <div class="container">
+        <div class="row">
+            <div id="main" class="col-md-9">
+                <article>
+                    <h2>Heading</h2>
+
+                    <div class="info">
+                        <span class="date"></span>
+                        <span class="author"></span>
+                        <span class="views"></span>
+                    </div>
+                    <div class="content">
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+                            fermentum massa
+                            justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+
+                        <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+
+                    </div>
+                    <footer>
+                        <span class="category"></span>
+                        <span class="tag"></span>
+                    </footer>
+                </article>
+                <article>
+                    <h2>Heading 2</h2>
+
+                    <div class="info">
+                        <span class="date"></span>
+                        <span class="author"></span>
+                        <span class="views"></span>
+                    </div>
+                    <div class="content">
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+                            fermentum massa
+                            justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+
+                        <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+
+                    </div>
+                    <div class="footer">
+                        <span class="category"></span>
+                        <span class="tag"></span>
+                    </div>
+                </article>
+            </div>
+            <div id="sidebar" class="col-md-3">
+                <h2>Heading</h2>
+
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa
+                    justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+
+                <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+            </div>
+        </div>
+    </div>
+</div>
