--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,7 +1,7 @@
-<div class="jumbotron">
+<div class="main-wrapper">
     <div class="container">
         <div class="row">
-            <div id="main" class="col-md-9">
+            <div class="main col-md-9">
                 <article>
                     <h2>Heading</h2>
 
@@ -45,7 +45,7 @@
                     </div>
                 </article>
             </div>
-            <div id="sidebar" class="col-md-3">
+            <div class="sidebar col-md-3">
                 <h2>Heading</h2>
 
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa
