--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,16 @@
 <html>
 <head>
   <title>Blog - <%= yield(:title) %></title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag 'application', :media => 'all' %>
-  <%= javascript_include_tag 'application' %>
 </head>
 <body>
+
 <%= render partial: '/header' %>
 <%= yield %>
 <%= render partial: '/footer' %>
+
+
 </body>
 </html>
