--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,43 +4,26 @@
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
       <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @post.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :author %><br>
-    <%= f.text_field :author %>
+    <%= f.text_field :author, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :content %><br>
-    <%= f.text_area :content %>
+    <%= f.text_area :content, class: 'form-control', rows: '10' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-default' %>
   </div>
 <% end %>
-
-
-<!-- <form action="<%= posts_path %>" method="post">
-          <div class="form-group">
-            <label for="title">Title</label>
-            <input name="post[title]" type="text" class="form-control" id="title" placeholder="Title">
-          </div>
-          <div class="form-group">
-            <label for="author">Author</label>
-            <input name="post[author]" type="text" class="form-control" id="author" placeholder="Author">
-          </div>
-          <div class="form-group">
-            <label for="content">Content</label>
-            <textarea name="post[content]" class="form-control" id="content" rows="10"></textarea>
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form> -->
