fix: responsive bug for blank area.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -11,6 +11,8 @@ body {
 
       .main {
         background-color: #eaeaea;
+        padding-top: 5px;
+        padding-bottom: 5px;
       }
     }
   }
