--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<% title 'Post' %>
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -12,7 +13,7 @@
 
 <p>
   <strong>Content:</strong>
-  <%= @post.content %>
+  <%= markdown @post.content %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
