fix title issue

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<% title 'home'  %>
+<% title 'Make dream · Personal website'  %>
 <div class="main-wrapper">
     <div class="container">
         <div class="row">
