--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -11,18 +11,14 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="#archive">Archive</a></li>
-        <li><a href="#bio">Bio</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Others
-            <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li role="separator" class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
+        <li class="active">
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <%= link_to 'Archive', posts_path %>
+        </li>
+        <li>
+          <a href="#bio">Bio</a>
         </li>
       </ul>
     </div>
