--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,11 @@
 <% title 'Make dream · Edit post' %>
-<h1>Editing Post</h1>
+<div class="row">
+  <div class="main col-md-12">
+    <h1>Editing Post</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+    <%= link_to 'Show', @post %> |
+    <%= link_to 'Back', posts_path %>
+  </div>
+</div>
