--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,20 +1,23 @@
 <% title 'Make dream · Post' %>
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="main col-md-12">
+    <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+    <p>
+      <strong>Title:</strong>
+      <%= @post.title %>
+    </p>
 
-<p>
-  <strong>Author:</strong>
-  <%= @post.author %>
-</p>
+    <p>
+      <strong>Author:</strong>
+      <%= @post.author %>
+    </p>
 
-<p>
-  <strong>Content:</strong>
-  <%= markdown @post.content %>
-</p>
+    <p>
+      <%= markdown @post.content %>
+    </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+    <%= link_to 'Edit', edit_post_path(@post) %> |
+    <%= link_to 'Back', posts_path %>
+  </div>
+</div>
