--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -14,6 +14,46 @@ body {
         padding-top: 5px;
         padding-bottom: 5px;
       }
+      .post {
+        padding-bottom: 15px;
+        margin-bottom: 20px;
+        box-shadow: 0px 0px 5px 2px #ccc;
+        -moz-box-shadow: 0px 0px 5px 2px #ccc;
+        -webkit-box-shadow: 0px 0px 5px 2px #ccc;
+        h2 {
+          border-bottom: 1px solid #CCC;
+          border-right: 1px solid #CCC;
+          border-left: 1px solid white;
+          border-top: 1px solid white;
+          padding: 8px;
+          font-size: 30px;
+          background: #EEE;
+          margin-bottom: 0;
+        }
+        .date {
+          margin-right: 15px;
+          float: left;
+        }
+        .author {
+          float: left;
+        }
+        .content {
+          padding: 8px;
+          line-height: 1.7;
+          font-weight: 400;
+          overflow: hidden;
+          border-left: 1px solid #EEE;
+          border-right: 1px solid #EEE;
+          background: white;
+        }
+        .info {
+          background-color: #f5f5f5;
+          height: 25px;
+          padding: 5px;
+          border-left: 1px solid #EEE;
+          border-right: 1px solid #EEE;
+        }
+      }
     }
   }
 }
