feat: change post backkground-color

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -10,7 +10,7 @@ body {
       background-color: white;
 
       .main {
-        background-color: #eaeaea;
+        background-color: #FBFBFB;
         padding-top: 5px;
         padding-bottom: 5px;
       }
