--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <% title 'Make dream · Personal website' %>
+<% page_name 'home' %>
 <div class="row">
   <div class="main col-md-9">
     <% @posts.each do |post| %>
