--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -13,7 +13,7 @@
       <a class="navbar-brand" href="/">Make Dream</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
         <li class=<%= tab_style('home', page_name) %>>
           <a href="/">Home</a>
         </li>
@@ -23,6 +23,20 @@
         <li class=<%= tab_style('bio', page_name) %>>
           <a href="#bio">Bio</a>
         </li>
+        <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= current_user.name %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to "Log out", logout_path, :method => :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
     </div>
   </div>
