--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,9 @@
       <%= markdown @post.content %>
     </p>
 
-    <%= link_to 'Edit', edit_post_path(@post) %> |
+    <% if logged_in? %>
+      <%= link_to 'Edit', edit_post_path(@post) %> |
+    <% end %>
     <%= link_to 'Back', posts_path %>
   </div>
 </div>
