--- a/app/views/_footer.html.erb
+++ b/app/views/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <footer>
-    <!--<hr>-->
-    <!--<p>© Company 2014</p>-->
+    <hr>
+    <p>© 2015 <strong>Make dream</strong></p>
   </footer>
 </div>
